--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "mysql": "^2.15.0",
     "popper.js": "^1.14.3",
     "react": "^16.4.0",
+    "react-bootstrap": "^0.32.1",
     "react-confirm-alert": "^2.0.5",
     "react-contextmenu": "^2.9.3",
     "react-data-grid": "^4.0.7",
